--- a/themes/hugo-universal-theme/layouts/partials/contact.html
+++ b/themes/hugo-universal-theme/layouts/partials/contact.html
@@ -1,72 +1,75 @@
 <div class="container" id="contact">
 
-    <div class="row">
-        <div class="col-md-8">
+  <div class="row">
+    <div class="col-md-8">
 
-            <section>
+      <section>
 
-                {{ .Content }}
+        {{ .Content }}
 
-                {{ if isset .Site.Params "email" }}
+        {{ if isset .Site.Params "email" }}
 
-                <div class="heading">
-                  <h3>{{ i18n "contactForm" }}</h3>
-                </div>
-
-                <div id="contact-message"></div>
-
-                <form method="post" action="https://formspree.io/xleeeyov">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="form-group">
-                              <label for="name">{{ i18n "contactName" }}</label>
-                                <input type="text" class="form-control" name="name" id="name" required>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="form-group">
-                                <label for="email">{{ i18n "contactMail" }}</label>
-                                <input type="text" class="form-control" name="email" id="email" required>
-                            </div>
-                        </div>
-                        <div class="col-sm-12">
-                            <div class="form-group">
-                              <label for="message">{{ i18n "contactMessage" }}</label>
-                                <textarea id="message" class="form-control" name="message" required></textarea>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-12 text-center">
-                          <button type="submit" class="btn btn-template-main"><i class="fa fa-envelope-o"></i>{{ i18n "contactSend" }}</button>
-
-                        </div>
-                    </div>
-                    <!-- /.row -->
-                </form>
-
-                {{ end }}
-
-            </section>
-
+        <div class="heading">
+          <h3>{{ i18n "contactForm" }}</h3>
         </div>
 
-        <div class="col-md-4">
+        <div id="contact-message"></div>
 
-            {{ if isset .Site.Params "address" }}
-            <section>
+        <form method="post" action="https://formspree.io/xleeeyov">
+          <input type="hidden" name="_subject" value="Contactverzoek via de website" />
+          <input type="hidden" name="_language" value="nl" />
 
-              <h3 class="text-uppercase"> {{ i18n "contactAddrTitle" }}</h3>
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="name">{{ i18n "contactName" }}</label>
+                <input type="text" class="form-control" name="name" id="name" required>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="email">{{ i18n "contactMail" }}</label>
+                <input type="text" class="form-control" name="email" id="email" required>
+              </div>
+            </div>
+            <div class="col-sm-12">
+              <div class="form-group">
+                <label for="message">{{ i18n "contactMessage" }}</label>
+                <textarea id="message" class="form-control" name="message" required></textarea>
+              </div>
+            </div>
 
-                {{ .Site.Params.address | safeHTML }}
+            <div class="col-sm-12 text-center">
+              <button type="submit" class="btn btn-template-main"><i class="fa fa-envelope-o"></i>{{ i18n "contactSend" }}</button>
 
-            </section>
+            </div>
+          </div>
+          <!-- /.row -->
+        </form>
 
-            {{ end }}
+        {{ end }}
 
-        </div>
+      </section>
 
     </div>
-    <!-- /.row -->
+
+    <div class="col-md-4">
+
+      {{ if isset .Site.Params "address" }}
+      <section>
+
+        <h3 class="text-uppercase"> {{ i18n "contactAddrTitle" }}</h3>
+
+        {{ .Site.Params.address | safeHTML }}
+
+      </section>
+
+      {{ end }}
+
+    </div>
+
+  </div>
+  <!-- /.row -->
 </div>
 
 {{ partial "map.html" . }}
