move to Hugo Pipes

--- a/themes/hugo-universal-theme/layouts/partials/head.html
+++ b/themes/hugo-universal-theme/layouts/partials/head.html
@@ -21,32 +21,19 @@
   {{ .Hugo.Generator }}
 
   <link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,500,700,800' rel='stylesheet' type='text/css'>
-
-  <!-- Bootstrap and Font Awesome css -->
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/font-awesome.min.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/bootstrap.min.css">
-
-  <!-- Css animations  -->
-  <link href="{{ "css/animate.css" | relURL}}" rel="stylesheet">
-
-  <!-- Theme stylesheet, if possible do not edit this stylesheet -->
-  {{ if and (isset .Site.Params "style") .Site.Params.style }}
-    <link href="{{ "css/style" | relURL}}.{{ .Site.Params.style }}.css" rel="stylesheet" id="theme-stylesheet">
-  {{ else }}
-    <link href="{{ "css/style.default.css" | relURL}}" rel="stylesheet" id="theme-stylesheet">
-  {{ end }}
-
-
-  <!-- Custom stylesheet - for your changes -->
-  <link href="{{ "css/custom.css" | relURL}}" rel="stylesheet">
+  {{ $fa := resources.Get "css/font-awesome.min.css" }}
+  {{ $carousel := resources.Get "css/owl.carousel.css" }}
+  {{ $owl := resources.Get "css/owl.theme.css" }}
+  {{ $bootstrap := resources.Get "css/bootstrap.min.css" }}
+  {{ $animate := resources.Get "css/animate.css" }}
+  {{ $default := resources.Get "css/style.default.css" }}
+  {{ $custom := resources.Get "css/custom.css" }}
+  {{ $style := slice $fa $carousel $owl $bootstrap $animate $default $custom | resources.Concat "style.css" | minify | resources.Fingerprint "sha512" }}
+  <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
 
   <!-- Favicon and apple touch icons-->
   <link rel="shortcut icon" href="{{ "img/favicon.ico" | relURL }}" type="image/x-icon" />
   <link rel="apple-touch-icon" href="{{ "img/apple-touch-icon.png" | relURL }}" />
-  <!-- owl carousel css -->
-
-  <link href="{{ "css/owl.carousel.css" | relURL}}" rel="stylesheet">
-  <link href="{{ "css/owl.theme.css" | relURL}}" rel="stylesheet">
 
   <link rel="alternate" href="{{ "/index.xml" | absURL }}" type="application/rss+xml" title="{{ .Site.Title }}">
 
