--- a/themes/hugo-universal-theme/layouts/partials/map.html
+++ b/themes/hugo-universal-theme/layouts/partials/map.html
@@ -1,15 +1,7 @@
-{{ if isset .Site.Params "latitude" }}
-  {{ if isset .Site.Params "longitude" }}
-      <div class="hidden">
-        <input id="gmap-lat" value="{{ .Site.Params.latitude }}" />
-        <input id="gmap-lng" value="{{ .Site.Params.longitude }}" />
-        <input id="gmap-marker" value="{{ .Site.BaseURL }}img/marker.png" />
-        {{ if isset .Site.Params "direction" }}
-          <input id="gmap-dir" value="{{ .Site.Params.direction }}" />
-        {{ else }}
-          <input id="gmap-dir" value="{{ .Site.Params.latitude }},{{ .Site.Params.longitude }}" />
-        {{ end }}
-      </div>
-      <div id="map" />
-  {{ end }}
-{{ end }}
+<iframe
+  width="100%"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCjmOEg7tkgmoK5tLAV6yjODdejSu1kJYY
+    &q=Fysio+Deurloo,Tholen" allowfullscreen>
+</iframe>
