--- a/themes/hugo-universal-theme/layouts/partials/scripts.html
+++ b/themes/hugo-universal-theme/layouts/partials/scripts.html
@@ -1,19 +1,11 @@
-{{ template "_internal/google_analytics.html" . }}
-<script src="{{ .Site.BaseURL }}js/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<script src="{{ .Site.BaseURL }}js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+{{ $jquery := resources.Get "js/jquery.min.js" }}
+{{ $bootstrap := resources.Get "js/bootstrap.min.js" }}
+{{ $cookie := resources.Get "js/jquery.cookie.min.js" }}
+{{ $waypoints := resources.Get "js/jquery.waypoints.min.js" }}
+{{ $counterup := resources.Get "js/jquery.counterup.min.js" }}
+{{ $parallax := resources.Get "js/jquery-parallax.js" }}
+{{ $carousel := resources.Get "js/owl.carousel.min.js" }}
+{{ $front := resources.Get "js/front.js" }}
 
-<script src="{{ .Site.BaseURL }}js/jquery.cookie.min.js"></script>
-<script src="{{ .Site.BaseURL }}js/jquery.waypoints.min.js"></script>
-<script src="{{ .Site.BaseURL }}js/jquery.counterup.min.js"></script>
-<script src="{{ .Site.BaseURL }}js/jquery-parallax.js"></script>
-{{ if .Site.Params.googleMapsApiKey }}
-<script src="//maps.googleapis.com/maps/api/js?key={{.Site.Params.googleMapsApiKey}}&v=3.exp"></script>
-{{ else }}
-<script src="//maps.googleapis.com/maps/api/js?v=3.exp"></script>
-{{ end }}
-<script src="{{ .Site.BaseURL }}js/hpneo.gmaps.js"></script>
-<script src="{{ .Site.BaseURL }}js/gmaps.init.js"></script>
-<script src="{{ .Site.BaseURL }}js/front.js"></script>
-
-<!-- owl carousel -->
-<script src="{{ .Site.BaseURL }}js/owl.carousel.min.js"></script>
+{{ $js := slice $jquery $bootstrap $cookie $waypoints $counterup $parallax $carousel $front | resources.Concat "app.js" | minify | resources.Fingerprint "sha512" }}
+<script src="{{ $js.Permalink }}" integrity="{{ $js.Data.Integrity }}"></script>
