--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -30,7 +30,7 @@
 
                   <div class="col-md-2">
                     {{ if .Params.banner }}
-                    <img src="{{ .Site.BaseURL}}{{ .Params.banner }}" class="img-responsive" alt="">
+                    <img src="{{ .Site.BaseURL}}{{ .Params.banner }}" class="img-responsive" alt="Fysio Deurloo banner">
                     {{ end }}
                   </div>
 
