--- a/layouts/partials/carousel.html
+++ b/layouts/partials/carousel.html
@@ -13,7 +13,7 @@
                             {{ .description | safeHTML }}
                         </div>
                         <div class="col-sm-7">
-                            <img class="img-responsive" src="{{ .image }}" alt="">
+                            <img class="img-responsive" src="{{ .image }}" alt="Foto van het pand van Fysio Deurloo">
                         </div>
                     </div>
                 </div>
