--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -27,7 +27,7 @@
 
             {{ .Site.Params.address | markdownify }}
 
-            <a href="/contact" class="btn btn-small btn-template-main">{{ i18n "contactGoTo" }}</a>
+            <p><a href="/contact" class="btn btn-small btn-template-main">{{ i18n "contactGoTo" }}</a></p>
 
             <hr class="hidden-md hidden-lg hidden-sm">
 
