pulled Roboto into the site

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -25,7 +25,7 @@
 
           <h4>{{ i18n "contactTitle" }}</h4>
 
-            {{ .Site.Params.address | markdownify }}
+            <p>{{ .Site.Params.address | markdownify }}</p>
 
             <p><a href="/contact" class="btn btn-small btn-template-main">{{ i18n "contactGoTo" }}</a></p>
 
