--- a/themes/hugo-universal-theme/layouts/partials/head.html
+++ b/themes/hugo-universal-theme/layouts/partials/head.html
@@ -13,6 +13,7 @@
   {{ end }}
 
   {{ if .Description }}
+
   <meta name="description" content="{{ .Description }}">
   {{ else if .Site.Params.DefaultDescription }}
   <meta name="description" content="{{ .Site.Params.DefaultDescription }}">
@@ -20,15 +21,15 @@
 
   {{ .Hugo.Generator }}
 
-  <link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,500,700,800' rel='stylesheet' type='text/css'>
   {{ $fa := resources.Get "css/font-awesome.min.css" }}
+  {{ $fonts := resources.Get "css/fonts.css" }}
   {{ $carousel := resources.Get "css/owl.carousel.css" }}
   {{ $owl := resources.Get "css/owl.theme.css" }}
   {{ $bootstrap := resources.Get "css/bootstrap.min.css" }}
   {{ $animate := resources.Get "css/animate.css" }}
   {{ $default := resources.Get "css/style.default.css" }}
   {{ $custom := resources.Get "css/custom.css" }}
-  {{ $style := slice $fa $carousel $owl $bootstrap $animate $default $custom | resources.Concat "css/style.css" | minify | resources.Fingerprint "sha512" }}
+  {{ $style := slice $fa $fonts $carousel $owl $bootstrap $animate $default $custom | resources.Concat "css/style.css" | minify | resources.Fingerprint "sha512" }}
   <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
 
   <!-- Favicon and apple touch icons-->
