--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,14 @@
-/* your styles go here */
+.avatar {
+  margin: 0 auto;
+}
+
+.team-member .text {
+  margin-top: 20px;
+}
+
+.team-member h3 {
+  margin-bottom: 20px;
+}
 
 .box-image-text .image {
   min-height: 200px;
