--- a/layouts/medewerker/list.html
+++ b/layouts/medewerker/list.html
@@ -25,10 +25,11 @@
             <div class="col-sm-4">
               <div class="team-member animated fadeInUp" data-animate="fadeInUp" style="opacity: 0;">
                 <div class="image">
-                  <img src="{{ .Site.BaseURL}}{{ .Params.banner }}" alt="{{ .Title }}" class="img-responsive img-circle" style="margin: 0 auto;">
+                  <img src="{{ .Site.BaseURL}}{{ .Params.banner }}" alt="{{ .Title }}" class="avatar img-responsive img-circle">
                 </div>
-                <h3>{{ .Title }}</h3>
-                <p class="role">{{ .Params.role }}</p>
+                <h2>{{ .Title }}</h2>
+                <p class="role"><small>{{ .Params.role }}</small></p>
+                <p class="role"><small>{{ .Params.clubs }}</small></p>
                 <div class="text">
                   {{ .Content }}
                 </div>
