--- a/themes/hugo-universal-theme/layouts/partials/head.html
+++ b/themes/hugo-universal-theme/layouts/partials/head.html
@@ -1,35 +1,25 @@
 <head>
   <meta charset="utf-8">
-  <meta name="robots" content="all,follow">
-  <meta name="googlebot" content="index,follow,snippet,archive">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ .Title }}</title>
-  <meta name="author" content="{{ .Site.Author.name }}" />
+  
+  <meta name="description" content="
+  {{- with .Description }}{{ . }}{{ else -}}
+    {{- if .IsPage }}{{ .Summary -}}
+    {{- else }}{{ with .Site.Params.description -}}
+    {{- . -}}
+    {{- end -}}
+  {{ end }}{{ end }}">
 
-  {{ if .Keywords }}
-  <meta name="keywords" content="{{ delimit .Keywords ", " }}">
-  {{ else if .Site.Params.DefaultKeywords }}
-  <meta name="keywords" content="{{ delimit .Site.Params.DefaultKeywords ", " }}">
-  {{ end }}
-
-  {{ if .Description }}
-
-  <meta name="description" content="{{ .Description }}">
-  {{ else if .Site.Params.DefaultDescription }}
-  <meta name="description" content="{{ .Site.Params.DefaultDescription }}">
-  {{ end }}
-
-  {{ .Hugo.Generator }}
-
-  {{ $fa := resources.Get "css/font-awesome.min.css" }}
-  {{ $fonts := resources.Get "css/fonts.css" }}
-  {{ $carousel := resources.Get "css/owl.carousel.css" }}
-  {{ $owl := resources.Get "css/owl.theme.css" }}
-  {{ $bootstrap := resources.Get "css/bootstrap.min.css" }}
-  {{ $animate := resources.Get "css/animate.css" }}
-  {{ $default := resources.Get "css/style.default.css" }}
-  {{ $custom := resources.Get "css/custom.css" }}
-  {{ $style := slice $fa $fonts $carousel $owl $bootstrap $animate $default $custom | resources.Concat "css/style.css" | minify | resources.Fingerprint "sha512" }}
+  {{- $fa := resources.Get "css/font-awesome.min.css" -}}
+  {{- $fonts := resources.Get "css/fonts.css" -}}
+  {{- $carousel := resources.Get "css/owl.carousel.css" -}}
+  {{- $owl := resources.Get "css/owl.theme.css" -}}
+  {{- $bootstrap := resources.Get "css/bootstrap.min.css" -}}
+  {{- $animate := resources.Get "css/animate.css" -}}
+  {{- $default := resources.Get "css/style.default.css" -}}
+  {{- $custom := resources.Get "css/custom.css" -}}
+  {{- $style := slice $fa $fonts $carousel $owl $bootstrap $animate $default $custom | resources.Concat "css/style.css" | minify | resources.Fingerprint "sha512" }}
   <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
 
   <!-- Favicon and apple touch icons-->
@@ -38,17 +28,14 @@
 
   <link rel="alternate" href="{{ "/index.xml" | absURL }}" type="application/rss+xml" title="{{ .Site.Title }}">
 
-  <!-- Twitter Card meta tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@{{ .Site.Params.twitter }}">
-  <meta name="twitter:title" content="{{ if .Title }}{{ .Title }}{{ else }}{{ .Site.Title }}{{ end }}">
-  {{ if .Params.banner }}<meta name="twitter:image" content="{{ .Params.banner | absURL }}">
-  {{ end }}<meta name="twitter:description" content="{{ if .Params.description }}{{ .Params.description }}{{ else }}{{ .Site.Params.defaultDescription }}{{ end }}">
-
   <!-- Facebook OpenGraph tags -->
   <meta property="og:title" content="{{ .Title }}" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ .Permalink }}/" />
   <meta property="og:image" content="{{ .Site.Params.logo }}" />
-
+  {{ if and (eq .Kind "taxonomy") (eq .Type "categories")}}
+  <meta name="robots" content="noindex, follow"/>
+  {{ else }}
+  <meta name="robots" content="index, follow"/>
+  {{ end }}
 </head>
