--- a/themes/hugo-universal-theme/layouts/partials/head.html
+++ b/themes/hugo-universal-theme/layouts/partials/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ .Title }}</title>
-  
+
   <meta name="description" content="
   {{- with .Description }}{{ . }}{{ else -}}
     {{- if .IsPage }}{{ .Summary -}}
@@ -22,11 +22,16 @@
   {{- $style := slice $fa $fonts $carousel $owl $bootstrap $animate $default $custom | resources.Concat "css/style.css" | minify | resources.Fingerprint "sha512" }}
   <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
 
-  <!-- Favicon and apple touch icons-->
-  <link rel="shortcut icon" href="{{ "img/favicon.ico" | relURL }}" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="{{ "img/apple-touch-icon.png" | relURL }}" />
-
   <link rel="alternate" href="{{ "/index.xml" | absURL }}" type="application/rss+xml" title="{{ .Site.Title }}">
+
+  <!-- realfavicongenerator -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#fcaf00">
 
   <!-- Facebook OpenGraph tags -->
   <meta property="og:title" content="{{ .Title }}" />
