updated links with redirects

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,7 +11,7 @@
 
             <hr class="hidden-md hidden-lg hidden-sm">
 
-            <p class="small" style="margin-top: 3em;">
+            <p class="small add-top-3" lang="en">
               {{ i18n "websiteBy" }} <a href="https://www.spacebabies.nl/">Space Babies</a>.<br>
               {{ i18n "templateBy" }} <a href="http://bootstrapious.com/free-templates">Bootstrapious</a>.<br>
               {{ i18n "portedBy" }} <a href="https://github.com/devcows/hugo-universal-theme">DevCows</a>.
