link using LinkTitle
less repetition

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -36,7 +36,7 @@
 
                   <div class="col-md-10">
                     <p class="intro">{{ .Summary }}</p>
-                    <p class="read-more"><a href="{{ .Permalink }}" class="btn btn-template-main">{{ i18n "continueReading" }}</a></p>
+                    <p class="read-more"><a href="{{ .Permalink }}" class="btn btn-template-main">{{ .LinkTitle }}</a></p>
                   </div>
 
                 </div>
